# calc-monaco-editor-react-public

./: package.json  pyproject.toml  readme.md  tasks.py
src/: App.tsx
src/domain/: CalcTokensProvider.ts  ParserFacade.ts
src/pages/Main/: index.tsx
src/test/: lexing.test.ts  parsing.test.ts
tools/: .gitignore
