[tool.poetry]
name = "calc-monaco-editor-react"
version = "0.1.0"
description = ""
authors = ["threecourse <daisukeka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ipython = "*"
black = "*"
mypy = "*"
isort = "*"
flake8 = "*"
invoke = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
